--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,3 +1,51 @@
-.testing {
-  width: 71.42857%;
-  background: #000; }
+#sidebar {
+  float: right; }
+  #sidebar ul li {
+    list-style-type: none;
+    text-transform: capitalize; }
+
+#theMain {
+  padding: 0px; }
+
+iframe {
+  border: 0px;
+  box-shadow: 0px 8px 6px -4px #666666;
+  background: url(reload.gif) no-repeat center center; }
+
+.main {
+  text-transform: capitalize;
+  text-align: center; }
+
+.btn-group {
+  margin: 30px auto; }
+
+button {
+  outline: none !important; }
+
+.zips {
+  text-decoration: underline;
+  color: #5BC0DE; }
+  .zips:hover, .zips:visited {
+    text-decoration: underline;
+    color: #666666; }
+
+.well {
+  padding: 0px;
+  background: none;
+  border: 0px;
+  margin: 0px;
+  box-shadow: none; }
+
+.list-group, .btn-default {
+  box-shadow: none; }
+
+.list-group li {
+  margin-bottom: 3px; }
+
+h3 {
+  margin-top: 0px;
+  text-shadow: -1px 1px #fff; }
+
+@media only screen and (min-width: 767px) {
+  .well {
+    padding: 20px 10px; } }
